# build_tool

./: .gitignore  README.md  pyproject.toml  pytest.ini  readme.md
src/main/build_tool/: amazon_deploy.py  amazon_main.py  arkon_config.py  auth_method.py  cloud_aws_s3.py  persist_attr.py
src/test/build_tool_test/: .gitignore  amazon_deploy_test.ini  amazon_deploy_test.py  arkon_config_test.ini  arkon_config_test.py  cloud_aws_s3_test.ini  cloud_aws_s3_test.py  persist_attr_test.py
tool/: arkon.py  arkon.sh  github_advance.py  github_squash.py  invoke_pytest.sh  produce_dist.sh  provision_env.sh
